Fix bottom spacing in movie single

--- a/src/styles/components/_singleMovie.scss
+++ b/src/styles/components/_singleMovie.scss
@@ -5,6 +5,7 @@
 
     @media (min-width: $tablet) {
         height: 80vh;
+        padding-bottom: 12rem;
     }
 }
 .single-movie-style {
